Description
When you use our desk.cpl (r70577) on MS Windows XP, there is a bug:
Whenever I move the res-slider to the right: the bit-depth automatically becomes 256 colors (on the first slider switch and stays this way)
And whenever I move the slider to the left: the bit-depth automatically becomes 32bit colours (on the first slider switch and stays this way)
So the same resolution leads to different bit-depths, the only thing that influences this is sliding-direction.
100% reproducable "and not caused because driver only supports this and that"
The XP builtin desk.cpl does not show this behavior.
--------------
I double-checked with desk.cpl from r70576 and the bug happens there as well, so it was not caused by fixing CORE-10786 in r70577.