[DESK.CPL]: Fix resolution slider issues. Patch by "reactosfanboy" and Mark Jansen (nick "learn_more") CORE-10792 #resolve

svn path=/trunk/; revision=70729